--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                     <div class="img-text-wrapper">
                         <div class="lego-wrapper">
-                            <img src="C:\Users\user\Desktop\MATH-FACE\quip/download.jpg"> 
+                            <img src="https://github.com/mathface/maths-facilitation-center/blob/main/download.jpg?"> 
                           
                         </div>
 
@@ -84,7 +84,7 @@
 
                     <div class="img-text-wrapper">
                         <div class="lego-wrapper">
-                            <img src="C:\Users\user\Desktop\MATH-FACE\quip/download.jpg"> 
+                            <img src="https://github.com/mathface/maths-facilitation-center/blob/main/download.jpg?"> 
                           
                         </div>
 
@@ -204,4 +204,4 @@
 
     </div>
 </body>
-</html>    
+</html>     
